# trading212-api

./: README.md  examples.md  pyproject.toml
examples/: README.md  example-account.py  example-events.py  example-instrument.py  example-orders.py  example-positions.py
src/pyt212.egg-info/: PKG-INFO  SOURCES.txt
src/t212/: __init__.py  client.py  models.py
src/t212.egg-info/: PKG-INFO  SOURCES.txt
src/trading212_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/trading212api/: __init__.py  client.py
