[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyt212"
version = "0.1.0"
description = "Python wrapper for the Trading 212 REST API (Invest and Stocks ISA)"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Trading 212 API Contributors" }]
keywords = ["trading212", "trading", "api", "invest", "stocks", "isa"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/edt-andrew/trading212-api"
Repository = "https://github.com/edt-andrew/trading212-api"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
